# calcucalor_cicd

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  file_for_test_ci.py  pyproject.toml
.github/workflows/: ci.yml
calculator_cicd/: big_calculator.py  calculator.py
tests/: test_big_calc.py  test_main.py
