[project]
name = "calculator-cicd"
version = "0.1.0"
description = ""
authors = [
    {name = "stepanepam",email = "stepan_paraska@epam.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=24.10.0,<25.0.0)",
    "pylint (>=3.3.3,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pre-commit (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = ["C0103", "W0611", "C0304", "C0114", "C0116"]